--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,23 +2,31 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Responsive Layout</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <title>Week 2 Assignment</title>
 </head>
 <body>
-<h1>Lorem Ipsum</h1>
+
+<p class="main-heading">Lorem Ipsum</p>
+
 <div class="row">
+
 <div class="col-lg-4 col-md-6 col-sl-12">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est feugiat, faucibus ante vel, ullamcorper nisl. Ut lacinia nec mauris in convallis. Cras ut ipsum quam. Sed id augue est. Proin vel semper justo. Vivamus semper suscipit ornare. Donec gravida orci non varius tincidunt. Donec quis nibh nulla. In lacus libero, ultricies ut ultricies eget, maximus vitae leo. Aenean vitae sem nulla. Cras nec justo nisl. Suspendisse potenti. Aenean tempus risus pharetra, bibendum nisi et, vehicula purus. In eu mi tortor. Nulla facilisi. Donec suscipit, turpis ut volutpat rhoncus, nisi arcu semper nulla, eu facilisis orci lacus sit amet urna.</p>
+    <span class="para-headings">Paragraph 1</span>
+    <p class="para-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non augue dapibus nulla suscipit pulvinar. Phasellus nunc tortor, tempus nec ultricies a, suscipit nec nisi. Quisque metus ligula, ullamcorper in odio quis, dignissim mattis nunc. Sed tincidunt nisi orci. Quisque tempor id massa a imperdiet. Sed eu tristique tortor. Donec et ante orci. Donec quis erat varius, faucibus tellus vel, pellentesque ipsum. Proin viverra enim est, non accumsan risus lacinia ac. Aenean ut felis tristique, finibus mi eu, porta ante. Donec lobortis gravida maximus. Quisque suscipit ornare accumsan.</p>
 </div>
 
 <div class="col-lg-4 col-md-6 col-sl-12">
-    <p>Fusce a feugiat orci, at egestas quam. Vivamus sed magna ligula. Pellentesque auctor vehicula elit, ut congue magna viverra at. Phasellus non velit lobortis, ornare urna a, blandit metus. Maecenas eu est lectus. Curabitur eu malesuada odio. Donec tristique in ipsum vitae ultricies. Sed consectetur vitae sem ut dignissim.</p>
+    <span class="para-headings">Paragraph 2</span>
+    <p class="para-text">Aliquam gravida diam at tortor ornare lacinia. Morbi sit amet iaculis ipsum, in volutpat mi. Fusce fringilla, urna fringilla pharetra efficitur, massa velit accumsan tortor, placerat suscipit quam mi et dui. Curabitur id consequat ante. Nam bibendum mattis tortor sed elementum. Duis sit amet leo varius, fermentum leo in, convallis nisi. Curabitur dui nunc, convallis quis dolor non, maximus consectetur nunc. Ut lacinia nibh quis velit laoreet venenatis.</p>
 </div> 
 
-<div class="col-lg-4 col-md-6 col-sl-12">
-    <p>Vivamus eleifend ante at metus porta dignissim sed at erat. Duis ut augue non nisl egestas pretium. Pellentesque sed dolor est. Nulla at justo commodo, fermentum nibh non, placerat eros. Suspendisse potenti. Mauris ornare odio ornare elit finibus mollis. Etiam in mauris in purus placerat fermentum. Morbi rutrum felis at justo blandit, et laoreet enim dignissim. Nullam egestas est vel viverra commodo. Nullam congue quam sed volutpat egestas. Morbi interdum enim in cursus sollicitudin. Phasellus posuere vulputate lacus, ac tincidunt dui. Maecenas ac leo sem. Nulla ullamcorper odio quis justo laoreet, et mattis orci dictum.</p>
+<div class="col-lg-4 col-md-12 col-sl-12">
+    <span class="para-headings">Paragraph 3</span>
+    <p class="para-text">In sed pretium sem, sit amet sollicitudin massa. Suspendisse mollis viverra magna non rhoncus. Nam viverra ac leo elementum auctor. Suspendisse laoreet arcu vel consectetur semper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus nec malesuada sem, et fringilla dolor. Pellentesque magna leo, tristique nec justo sit amet, tincidunt congue nibh. Maecenas dignissim pharetra quam auctor ultricies. Integer vitae tempor sapien.</p>
 </div> 
 
 </div>
+
 </body>
 </html>
