--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/coursera-webdev/module2-solution/css/styles.css">
     <title>Week 2 Assignment</title>
 </head>
 <body>
