Added colours to section headings

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/coursera-webdev/module2-solution/css/styles.css">
+    <!-- <link rel="stylesheet" href="css/styles.css"> -->
     <title>Week 2 Assignment</title>
 </head>
 <body>
@@ -12,17 +13,17 @@
 <div class="row">
 
 <div class="col-lg-4 col-md-6 col-sl-12">
-    <span class="para-headings">Paragraph 1</span>
+    <span class="para-headings para1">Paragraph 1</span>
     <p class="para-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non augue dapibus nulla suscipit pulvinar. Phasellus nunc tortor, tempus nec ultricies a, suscipit nec nisi. Quisque metus ligula, ullamcorper in odio quis, dignissim mattis nunc. Sed tincidunt nisi orci. Quisque tempor id massa a imperdiet. Sed eu tristique tortor. Donec et ante orci. Donec quis erat varius, faucibus tellus vel, pellentesque ipsum. Proin viverra enim est, non accumsan risus lacinia ac. Aenean ut felis tristique, finibus mi eu, porta ante. Donec lobortis gravida maximus. Quisque suscipit ornare accumsan.</p>
 </div>
 
 <div class="col-lg-4 col-md-6 col-sl-12">
-    <span class="para-headings">Paragraph 2</span>
+    <span class="para-headings para2">Paragraph 2</span>
     <p class="para-text">Aliquam gravida diam at tortor ornare lacinia. Morbi sit amet iaculis ipsum, in volutpat mi. Fusce fringilla, urna fringilla pharetra efficitur, massa velit accumsan tortor, placerat suscipit quam mi et dui. Curabitur id consequat ante. Nam bibendum mattis tortor sed elementum. Duis sit amet leo varius, fermentum leo in, convallis nisi. Curabitur dui nunc, convallis quis dolor non, maximus consectetur nunc. Ut lacinia nibh quis velit laoreet venenatis.</p>
 </div> 
 
 <div class="col-lg-4 col-md-12 col-sl-12">
-    <span class="para-headings">Paragraph 3</span>
+    <span class="para-headings para3">Paragraph 3</span>
     <p class="para-text">In sed pretium sem, sit amet sollicitudin massa. Suspendisse mollis viverra magna non rhoncus. Nam viverra ac leo elementum auctor. Suspendisse laoreet arcu vel consectetur semper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus nec malesuada sem, et fringilla dolor. Pellentesque magna leo, tristique nec justo sit amet, tincidunt congue nibh. Maecenas dignissim pharetra quam auctor ultricies. Integer vitae tempor sapien.</p>
 </div> 
 
