adding navigation bar to website

--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -3,9 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="keywords" content="restaurant, chinese">
-    <meta name="description" content="Menu page for XYZ restaurant">
-    <meta name="author" content="Sushovit Razdan">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>David Chu's China Bistro</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -29,7 +26,7 @@
               <span>Kosher Certified</span>
             </p>
           </div>
-		  
+
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -39,35 +36,33 @@
         </div>
 
         <div id="collapsable-nav" class="collapse navbar-collapse">
-            <ul id="nav-list" class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="menu-categories.html">
-                        <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
-                </li>
-                <li id="phone" class="hidden-xs">
-                    <a href="tel:+91-98765-43210">
-                        <span>+91-98765-43210</span></a><div>* We Deliver</div>
-                </li>
-            </ul>
-        </div>
-      </div>
-    </nav>
-
+           <ul id="nav-list" class="nav navbar-nav navbar-right">
+            <li>
+              <a href="menu-categories.html">
+                <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
+            </li>
+            <li id="phone" class="hidden-xs">
+              <a href="tel:410-602-5008">
+                <span>410-602-5008</span></a><div>* We Deliver</div>
+            </li>
+          </ul><!-- #nav-list -->
+        </div><!-- .collapse .navbar-collapse -->
+      </div><!-- .container -->
+    </nav><!-- #header-nav -->
   </header>
 
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
 </body>
-
 </html>
