--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -72,6 +72,24 @@
       <img src="images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs">
     </div>
 
+    <div id="home-tiles" class="row">
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <a href="menu-categories.html"><div id="menu-tile"><span>menu</span></div></a>
+      </div>
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
+      </div>
+      <div class="col-md-4 col-sm-12 col-xs-12">
+        <a href="https://goo.gl/maps/avbxzMXVhkejfS9L8" target="_blank">
+          <div id="map-tile">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3500.375377267115!2d77.20381931473823!3d28.678415688754352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd854b3241ab%3A0x1af2c9555636bbed!2sChinese%20Bistro!5e0!3m2!1sen!2sin!4v1640798200124!5m2!1sen!2sin" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <span>map</span>
+          </div>
+
+        </a>
+      </div>
+    </div>
+
   </div>
 
 
