--- a/restaurant/menu-categories.html
+++ b/restaurant/menu-categories.html
@@ -34,10 +34,10 @@
             <span class="icon-bar"></span>
           </button>
         </div>
-
+        
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
-            <li>
+            <li class="active">
               <a href="menu-categories.html">
                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
             </li>
@@ -74,7 +74,7 @@
     </div>
 
     <section class="row">
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
         <a href="single-category.html">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
@@ -82,7 +82,7 @@
           </div>
         </a>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
         <a href="single-category.html">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
@@ -90,31 +90,7 @@
           </div>
         </a>
       </div>
-      <div class="col-md-3">
-        <a href="single-category.html">
-          <div class="category-tile">
-            <img  width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Lunch</span>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-3">
-        <a href="single-category.html">
-          <div class="category-tile">
-            <img  width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Lunch</span>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-3">
-        <a href="single-category.html">
-          <div class="category-tile">
-            <img  width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
-            <span>Lunch</span>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
         <a href="single-category.html">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
@@ -122,7 +98,7 @@
           </div>
         </a>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
         <a href="single-category.html">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
@@ -130,15 +106,39 @@
           </div>
         </a>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
         <a href="single-category.html">
           <div class="category-tile">
-            <img  width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
             <span>Lunch</span>
           </div>
         </a>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+        <a href="single-category.html">
+          <div class="category-tile">
+            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <span>Lunch</span>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+        <a href="single-category.html">
+          <div class="category-tile">
+            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <span>Lunch</span>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+        <a href="single-category.html">
+          <div class="category-tile">
+            <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
+            <span>Lunch</span>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
         <a href="single-category.html">
           <div class="category-tile">
             <img width="200" height="200" src="images/menu/B/B.jpg" alt="Lunch">
