--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -12,7 +12,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <title>Assignment 3</title>
+    <title>Assignment 3 solution</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
@@ -41,10 +41,11 @@
     </div><!-- /.container-fluid -->
   </nav>
 
-  <div id="main-content" class="container">
-    <p class="text-center" id="menu-title">Our Menu</p>
+  <p class="text-center" id="page-title">Our Menu</p>
 
-    <div id="menu-heading">
+  <div class="container" id="main-content">
+    <div class="col-md-12 col-sm-12 col-xs-12" id="menu-heading">
+      <p class="text-center" id="item-title">Chicken</p>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a est sed augue dignissim efficitur. Mauris ultricies eleifend accumsan. Proin ullamcorper, diam eu placerat scelerisque, odio nulla tristique ante, at accumsan tortor nibh eu dolor. Proin hendrerit luctus metus. Etiam euismod, felis sit amet efficitur convallis, odio sem placerat dui, ac varius dui eros et justo. Nulla eget mattis turpis. Cras facilisis rutrum scelerisque. Ut commodo cursus congue. Maecenas id metus et ipsum cursus scelerisque vitae nec est. Fusce tincidunt tellus at ultrices imperdiet.
         Suspendisse semper, arcu id ultricies luctus, sapien arcu sodales tortor, at pellentesque eros dui in purus. Mauris fringilla nibh a magna consequat, eu iaculis lacus tincidunt. Aliquam rhoncus dapibus quam eu tempus. Nam consectetur, erat non faucibus varius, purus leo varius turpis, non molestie elit nibh in est. Etiam a mi laoreet, bibendum ante in, ornare tortor. Suspendisse lorem dolor, blandit at felis non, pretium lobortis urna. Donec fermentum neque vitae tincidunt placerat. Aenean sit amet scelerisque ex. In placerat tempus mauris, at auctor mi lobortis nec. Aliquam a sem sit amet est gravida tempus non et eros. Integer nisi justo, molestie ut congue eget, consectetur id nibh. Praesent et fermentum tellus. Cras ut elit eget tellus efficitur posuere eu eget felis. Pellentesque mattis urna vitae elit consequat, ut egestas augue gravida. Vivamus eget eleifend libero.
